--- a/modules/app/src/main/res/layouts/fragments/layout/entity_table_row_view.xml
+++ b/modules/app/src/main/res/layouts/fragments/layout/entity_table_row_view.xml
@@ -80,6 +80,7 @@
             android:layout_height="30dp"
             android:layout_marginBottom="4dp"
             android:scaleType="fitCenter"
+            android:onClick="tapRemove"
             android:visibility="@{entityViewModel.permissionLevel > 2? View.VISIBLE:View.GONE}"
             app:srcCompat="@drawable/ic_close" />
     </TableRow>
