--- a/modules/app/src/main/res/layouts/fragments/layout/schedule_table_row_view.xml
+++ b/modules/app/src/main/res/layouts/fragments/layout/schedule_table_row_view.xml
@@ -100,6 +100,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:scaleType="fitCenter"
+            android:onClick="tapRemove"
             app:srcCompat="@drawable/ic_close" />
 
         <RelativeLayout
