Fixed UI not showing files correctly

--- a/modules/app/src/main/res/layouts/activities/courseEntityActivity/layout/course_entity_activity_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/courseEntityActivity/layout/course_entity_activity_layout.xml
@@ -91,7 +91,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:categoryTitle="@{`Files`}"
-                android:childEntities="@{files.values()}"
+                android:childEntities="@{files.values().size() > 0? files.values() : null}"
                 android:entityName="@{`file`}"
                 android:permissionLevel="@{1}" />
 
