--- a/modules/app/src/main/res/layouts/fragments/layout/file_input_dialog.xml
+++ b/modules/app/src/main/res/layouts/fragments/layout/file_input_dialog.xml
@@ -47,6 +47,7 @@
             android:layout_marginStart="@dimen/dim_8dp"
             android:layout_marginEnd="@dimen/dim_8dp"
             android:layout_weight="1"
+            android:hint="Enter file title"
             android:textStyle="bold" />
     </LinearLayout>
 
@@ -78,6 +79,7 @@
             android:layout_marginStart="@dimen/dim_8dp"
             android:layout_marginEnd="@dimen/dim_8dp"
             android:layout_weight="1"
+            android:hint="Enter file description"
             android:lines="2"
             android:textStyle="bold" />
     </LinearLayout>
