--- a/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_main_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_main_layout.xml
@@ -40,6 +40,10 @@
         <variable
             name="myOtherActivities"
             type="java.util.Map&lt;String, com.lonn.studentassistant.firebaselayer.viewModels.OtherActivityViewModel&gt;" />
+
+        <variable
+            name="profileImageContent"
+            type="com.lonn.studentassistant.firebaselayer.viewModels.FileContentViewModel" />
     </data>
 
     <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -81,6 +85,7 @@
                 app:optionalCourses="@{optionalCourses.values()}"
                 app:otherActivities="@{otherActivities.values()}"
                 app:professors="@{professors}"
+                app:profileImageContent="@{profileImageContent}"
                 app:recurringClasses="@{recurringClasses.values()}"
                 app:student="@{student}" />
 
