--- a/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_profile_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_profile_layout.xml
@@ -6,6 +6,8 @@
 
     <data>
 
+        <import type="com.lonn.studentassistant.utils.Utils" />
+
         <variable
             name="student"
             type="com.lonn.studentassistant.firebaselayer.viewModels.StudentViewModel" />
@@ -17,6 +19,10 @@
         <variable
             name="myOtherActivities"
             type="java.util.Collection&lt;com.lonn.studentassistant.firebaselayer.viewModels.OtherActivityViewModel&gt;" />
+
+        <variable
+            name="profileImageContent"
+            type="com.lonn.studentassistant.firebaselayer.viewModels.FileContentViewModel" />
     </data>
 
     <ScrollView
@@ -28,14 +34,51 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
+
+            <androidx.cardview.widget.CardView
                 android:id="@+id/profileImage"
-                android:layout_width="match_parent"
-                android:layout_height="125dp"
-                android:layout_marginTop="16dp"
-                android:contentDescription="Student image"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@{student.studentImage}" />
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_centerHorizontal="true"
+                app:cardCornerRadius="100dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:contentDescription="Student Image"
+                    android:scaleType="fitCenter"
+                    app:defaultSrcCompat="@{Utils.getDefaultPersonImageForName(student.firstName)}"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@{profileImageContent.fileContentBase64}" />
+
+            </androidx.cardview.widget.CardView>
+
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginStart="150dp"
+                android:layout_marginTop="150dp"
+                app:cardBackgroundColor="#00FFFFFF"
+                app:cardCornerRadius="20dp"
+                app:layout_constraintLeft_toLeftOf="@id/profileImage"
+                app:layout_constraintTop_toTopOf="@id/profileImage">
+
+                <ImageView
+                    android:id="@+id/imageUploadButton"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:contentDescription="Add image button"
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@drawable/ic_plus" />
+
+            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:id="@+id/titleProfileLayout"
