--- a/modules/app/src/main/res/layouts/activities/otherActivityEntityActivity/layout/other_activity_entity_activity_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/otherActivityEntityActivity/layout/other_activity_entity_activity_layout.xml
@@ -33,119 +33,92 @@
             type="java.util.Map&lt;String, com.lonn.studentassistant.firebaselayer.viewModels.RecurringClassViewModel&gt;" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <ScrollView
         style="@style/ScreenLayoutWrapped"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/activityTitle"
-            style="@style/DarkTitleShadowed"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@{otherActivity.name}"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:orientation="vertical"
+            android:gravity="center">
 
-        <TextView
-            android:id="@+id/activityType"
-            style="@style/DarkBlueShadowedH3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:gravity="center"
-            android:text="@{otherActivity.type}"
-            android:textSize="18sp"
-            app:layout_constraintTop_toBottomOf="@id/activityTitle" />
-
-        <TextView
-            android:id="@+id/activityYearAndSemester"
-            style="@style/DarkBlueShadowedH3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@{otherActivity.yearSemester}"
-            android:textSize="18sp"
-            app:layout_constraintTop_toBottomOf="@id/activityType" />
-
-        <TextView
-            android:id="@+id/activityDescription"
-            style="@style/DarkBlueShadowedH3"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="18dp"
-            android:text="@{otherActivity.description}"
-            android:textSize="18sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/activityYearAndSemester" />
-
-        <TextView
-            android:id="@+id/activityWebSite"
-            style="@style/DarkBlueShadowedH3"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@{otherActivity.website}"
-            android:textSize="18sp"
-            android:visibility="@{otherActivity.websiteVisible}"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/activityDescription" />
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="12dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="@id/activityWebSite"
-            app:layout_constraintTop_toBottomOf="@id/activityWebSite">
-
-            <LinearLayout
+            <TextView
+                style="@style/EntityActivityTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:text="@{otherActivity.name}" />
 
-                <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:categoryTitle="@{`Files`}"
-                    android:childEntities="@{files.values()}"
-                    android:entityName="@{`file`}" />
+            <TextView
+                style="@style/EntityActivitySubtitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{otherActivity.type + `\n` + otherActivity.yearSemester}" />
 
-                <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:categoryTitle="@{`Professors`}"
-                    android:childEntities="@{professors.values()}"
-                    android:entityName="@{`professor`}" />
+            <TextView
+                style="@style/EntityActivityContentTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Description" />
 
-                <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:categoryTitle="@{`Regular schedule`}"
-                    android:childEntities="@{recurringClasses.values()}"
-                    android:childEntityComparator="@{EntityViewComparatorHolder.ASCENDING_FIELD1_COMPARATOR}"
-                    android:entityName="@{`regular class`}"
-                    android:showEmpty="@{false}"
-                    android:showHeader="@{true}"
-                    android:subcategoryGeneratorFunction="@{(category) -> CategoryGenerator.scheduleCategories((CategoryViewModel) category)}"
-                    app:isTable="@{true}" />
+            <TextView
+                style="@style/EntityActivityContentText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{otherActivity.description}" />
 
-                <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:categoryTitle="@{`Special schedule`}"
-                    android:childEntities="@{oneTimeClasses.values()}"
-                    android:childEntityComparator="@{EntityViewComparatorHolder.ASCENDING_FIELD1_COMPARATOR}"
-                    android:showEmpty="@{false}"
-                    android:showHeader="@{true}"
-                    android:subcategoryDynamicGeneratorFunction="@{(category) -> CategoryGenerator.oneTimeScheduleCategories((CategoryViewModel) category, oneTimeClasses.values())}"
-                    app:isTable="@{true}" />
+            <TextView
+                style="@style/EntityActivityContentTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Website" />
 
-            </LinearLayout>
-        </ScrollView>
+            <TextView
+                style="@style/EntityActivityContentText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{otherActivity.website}"
+                android:visibility="@{otherActivity.websiteVisible}" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:categoryTitle="@{`Files`}"
+                android:childEntities="@{files.values()}"
+                android:entityName="@{`file`}" />
+
+            <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:categoryTitle="@{`Professors`}"
+                android:childEntities="@{professors.values()}"
+                android:entityName="@{`professor`}" />
+
+            <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:categoryTitle="@{`Regular schedule`}"
+                android:childEntities="@{recurringClasses.values()}"
+                android:childEntityComparator="@{EntityViewComparatorHolder.ASCENDING_FIELD1_COMPARATOR}"
+                android:entityName="@{`regular class`}"
+                android:showEmpty="@{false}"
+                android:showHeader="@{true}"
+                android:subcategoryGeneratorFunction="@{(category) -> CategoryGenerator.scheduleCategories((CategoryViewModel) category)}"
+                app:isTable="@{true}" />
+
+            <com.lonn.studentassistant.views.implementations.category.ScrollViewCategory
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:categoryTitle="@{`Special schedule`}"
+                android:childEntities="@{oneTimeClasses.values()}"
+                android:childEntityComparator="@{EntityViewComparatorHolder.ASCENDING_FIELD1_COMPARATOR}"
+                android:showEmpty="@{false}"
+                android:showHeader="@{true}"
+                android:subcategoryDynamicGeneratorFunction="@{(category) -> CategoryGenerator.oneTimeScheduleCategories((CategoryViewModel) category, oneTimeClasses.values())}"
+                app:isTable="@{true}" />
+
+        </LinearLayout>
+    </ScrollView>
 </layout>
