--- a/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_profile_layout.xml
+++ b/modules/app/src/main/res/layouts/activities/studentActivity/layout/student_activity_profile_layout.xml
@@ -34,51 +34,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-
-            <androidx.cardview.widget.CardView
+            <include
                 android:id="@+id/profileImage"
+                layout="@layout/rounded_image"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:layout_centerHorizontal="true"
-                app:cardCornerRadius="100dp"
+                app:defaultImage="@{Utils.getDefaultPersonImageForName(student.firstName)}"
+                app:image="@{profileImageContent.fileContentBase64}"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <ImageView
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
-                    android:contentDescription="Student Image"
-                    android:scaleType="fitCenter"
-                    app:defaultSrcCompat="@{Utils.getDefaultPersonImageForName(student.firstName)}"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@{profileImageContent.fileContentBase64}" />
-
-            </androidx.cardview.widget.CardView>
-
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_centerHorizontal="true"
-                android:layout_marginStart="150dp"
-                android:layout_marginTop="150dp"
-                app:cardBackgroundColor="#00FFFFFF"
-                app:cardCornerRadius="20dp"
-                app:layout_constraintLeft_toLeftOf="@id/profileImage"
-                app:layout_constraintTop_toTopOf="@id/profileImage">
-
-                <ImageView
-                    android:id="@+id/imageUploadButton"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:contentDescription="Add image button"
-                    android:scaleType="fitCenter"
-                    app:srcCompat="@drawable/ic_plus" />
-
-            </androidx.cardview.widget.CardView>
+                app:layout_constraintTop_toTopOf="parent"
+                app:size="@{200}" />
 
             <TextView
                 android:id="@+id/titleProfileLayout"
