--- a/modules/app/src/main/res/values/dimens.xml
+++ b/modules/app/src/main/res/values/dimens.xml
@@ -6,6 +6,8 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
+    <dimen name="dim_200dp">200dp</dimen>
+    <dimen name="dim_32dp">32dp</dimen>
     <dimen name="dim_16dp">16dp</dimen>
     <dimen name="dim_10dp">10dp</dimen>
     <dimen name="dim_8dp">8dp</dimen>
