--- a/modules/app/src/main/res/values/styles.xml
+++ b/modules/app/src/main/res/values/styles.xml
@@ -6,19 +6,32 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="alertDialogTheme">@style/DialogTheme</item>
     </style>
 
-    <style name="DialogTheme" parent="android:Theme.DeviceDefault.Light.Dialog">
+    <style name="DialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="android:windowBackground">@color/colorBackground</item>
         <item name="android:windowIsFloating">true</item>
-        <item name="android:windowTitleStyle">@style/DarkBlueShadowedH1</item>
         <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
-        <item name="android:buttonStyle">@style/BlueRoundButton</item>
-        <item name="android:textColorAlertDialogListItem">@color/colorPrimaryDark</item>
         <item name="android:checkedTextViewStyle">@style/CheckedTextViewStyle</item>
+        <item name="android:windowTitleStyle">@style/DarkTitleShadowed</item>
+        <item name="android:textSize">22sp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="buttonBarButtonStyle">@style/DialogButtons</item>
+
+        <!-- Colors -->
+        <item name="textColorAlertDialogListItem">@color/colorPrimary</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="DialogButtons">
+        <item name="android:textSize">18sp</item>
+        <item name="android:background" />
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="CheckedTextViewStyle">
